--- a/tests/README
+++ b/tests/README
@@ -1,4 +1,4 @@
-On laptop install php7.2 and php7.2-gd
+On laptop ```apt install php7.4 php7.4-gd```
 
 run tests:
 ./phpunit GrabSepaRiverReadingTest.php
